# liboptarith

./: .gitignore  Cargo.toml  README.md  flake.nix  optarith.nix  primes.c  primes.h  primorial.c  sqrtmodp_list.c  sqrtmodp_list.h
.cargo/: config.toml
code_gen/: gen_sqrtmodp.cc
crates/optarith/: Cargo.toml
crates/optarith-sys/: Cargo.toml  build.rs
crates/optarith-sys/src/: lib.rs
crates/optarith-sys/tests/: test_gcd.rs  test_u128.rs  time_bins.rs
crates/optarith/src/: gmp.rs  int128.rs  lib.rs
